--- a/CS525/web_fullstack/frontend/package.json
+++ b/CS525/web_fullstack/frontend/package.json
@@ -27,6 +27,7 @@
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "socket.io": "^1.4.5",
+    "systemjs": "^0.19.26",
     "underscore": "^1.8.3",
     "zone.js": "^0.6.11"
   }
