--- a/CS525/web_fullstack/package.json
+++ b/CS525/web_fullstack/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "coffee-script": "^1.10.0",
     "gulp": "^3.9.1",
+    "gulp-coffee": "^2.3.2",
     "gulp-live-server": "0.0.29"
   },
   "dependencies": {
