--- a/CS525/web_fullstack/frontend/package.json
+++ b/CS525/web_fullstack/frontend/package.json
@@ -15,7 +15,7 @@
     "gulp-debug": "^2.1.2",
     "gulp-if": "^2.0.0",
     "gulp-pug": "^2.0.0",
-    "gulp-scss": "^1.3.17",
+    "gulp-sass": "^2.3.1",
     "gulp-typescript": "^2.13.0",
     "yargs": "^4.6.0"
   },
