--- a/CS525/web_fullstack/package.json
+++ b/CS525/web_fullstack/package.json
@@ -18,6 +18,7 @@
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "redis": "^2.6.0-1",
-    "socket.io": "^1.4.5"
+    "socket.io": "^1.4.5",
+    "storm-drpc-node": "0.0.3"
   }
 }
